# AdvancedCpp2023

./: .gitignore  CMakeLists.txt  Makefile  README.md  format.bash  test.bash
client/: AuthManager.hpp  CMakeLists.txt  ClickableLabel.hpp  Connector.hpp  CreateNoteWindow.hpp  Hasher.hpp  LoginWindow.hpp  MainWindow.hpp  RegisterWindow.hpp  RemoveNoteWindow copy.hpp  RemoveNoteWindow.hpp  Service.hpp  Window.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/src/: CMakeLists.txt  main.cpp
client/src/include/: ConnectionCallback.hpp  Connector.hpp  CreateNoteWindow.hpp  LoginWindow.hpp  MainWindow.hpp  QTExtended.hpp  RegisterWindow.hpp  RemoveNoteWindow.hpp  Service.hpp  Window.hpp
client/tests/: CMakeLists.txt  almost_echo_server.cpp  test_almost_echo_server.py  tests.cpp
server/: CMakeLists.txt  main.cpp
server/src/: CMakeLists.txt  Handler.hpp  ResponseWrapper.hpp  Server.hpp  Session.hpp  main.cpp
server/src/service/: CMakeLists.txt  Note.cpp  Note.hpp  Service.cpp  Service.hpp  ServiceErrorCategory.hpp  UserData.cpp  UserData.hpp
server/tests/: CMakeLists.txt  server_tests.py  tests.cpp
tests/: CMakeLists.txt
